# ProxyEnvSwitcher

./: .gitignore  Cargo.toml  README.md  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  vite.config.ts
.trae/documents/: 基于Tauri+React的桌面端代理管理软件技术方案.md
src/: main.rs
src-react/: App.tsx  index.css
src-react/store/: connectionStatusStore.ts  logStore.ts  proxyConfigStore.ts  proxyRuleStore.ts
src-react/types/: index.ts
src-react/views/: ConnectionStatusPage.tsx  LogPage.tsx  ProxyConfigPage.tsx  RuleSettingPage.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
